<resources>
    <string name="app_name" translatable="false">TT购物</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>

    <string name="press_back_key_quit">再一次返回键退出。</string>

    <string name="menu_main">主页</string>
    <string name="menu_main_setting">主页设置</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_share">分享</string>
    <string name="menu_open_browser">浏览器打开</string>
    <string name="menu_clear">清理缓存</string>
    <string name="menu_exit">退出</string>

    <string name="about">关于</string>
    <string name="about_feedback">反馈</string>
    <string name="about_open_source">开放源代码许可</string>
    <string name="check_update">检查更新</string>
    <string name="weixin_not_installed">你好像没有安装微信</string>
    <string name="clear_cache_success">已清理缓存</string>
    <string name="pay_donate">捐赠</string>
    <string name="pay_donate_alipay">支付宝</string>
    <string name="pay_donate_wechat">微信</string>

    <string name="other">其他</string>

    <string name="action_add">添加</string>
    <string name="action_help">说明</string>
    <string name="action_add_dialog">添加主页</string>
    <string name="action_delete">删除</string>
    <string name="main_page_name">主页名称</string>
    <string name="main_page_website">主页网址(请以http://或https://开头)</string>

    <string name="web_site_taobao">淘宝</string>
    <string name="web_site_jingdong">京东</string>
    <string name="web_site_amazon">亚马逊</string>

    <string name="drawer_menu_other">其他</string>

    <string name="set_other_tao">淘口令</string>
    <string name="set_other_tao_message">在启动APP时会自动从剪贴板检测淘口令，只可解析标准格式淘口令。</string>

    <string name="set_other_wakeup_app">启用本地APP唤醒</string>
    <string name="set_other_wakeup_app_message">开启后在唤醒本地APP时会弹窗提示</string>

    <string name="taokey_dialog_title">淘口令:</string>
    <string name="taokey_dialog_message">检测到有一个淘口令:%s,是否马上打开？</string>

    <string name="dialog_open">打开</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_none">算了</string>

    <string name="dialog_title_is_null">主页名称不能为空!</string>
    <string name="dialog_title_is_more">主页名称不能超过20个字符!</string>
    <string name="dialog_website_is_error">主页网址格式错误，请参考说明!</string>

    <string name="dialog_donate_message">欢迎打赏本APP的开发者，您可以在支付宝或微信进行打赏。感谢使用！</string>
    <string name="weixin_tell_title">向导</string>
    <string name="weixin_tell_message">受到微信API的限制，您需要在在弹出的界面点击右上角，从相册选取，然后选择第一张二维码捐赠。感谢捐赠。</string>

    <string name="perm_tip">当前应用缺少必要权限。\n请点击"设置"-"权限"-打开所需权限。\n最后点击两次后退按钮，即可返回。</string>
    <string name="ask_again">请给予应用必要权限，让程序可正常工作。</string>
    <string name="cancel">取消</string>

    <string name="check_update_none">已是最新版本！</string>

    <string name="about_message">当前版本：%s \n功能介绍：APP集成了淘宝、京东、亚马逊的简易购物，您当然可以在设置主页添加任意网站。本应用未添加任何修改原网站功能，网站版权归原网站所有。如有问题，请反馈给开发者。</string>

    <string name="test">【未来简史（中文版） 赠未来简史和人类简史伴读有声书  人工智能 尤瓦尔 赫拉利 著  罗辑思维罗振宇推荐】http://www.dwntme.com/h.ZZvEWF4 点击链接，再选择浏览器打开；或复制这条信息￥hQt90lhvbpE￥后打开👉手淘👈</string>
</resources>
