<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_web_page_main"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/menu_main"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/menu_point"
        app:showAsAction="ifRoom" >

        <menu>
            <item
                android:id="@+id/menu_refresh"
                android:title="@string/menu_refresh" />

            <item
                android:id="@+id/menu_share"
                android:title="@string/menu_share" />

            <item
                android:id="@+id/menu_setting"
                android:title="@string/action_settings" />

            <item
                android:id="@+id/menu_clear"
                android:visible="false"
                android:title="@string/menu_clear" />

            <item
                android:id="@+id/menu_exit"
                android:title="@string/menu_exit" />

        </menu>


    </item>
</menu>
